cabal-version: 2.4
name:          tuya
version:       0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:        Shaun Sharples
maintainer:    shaun.sharples@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  hs-source-dirs:   lib
  default-language: Haskell2010
  ghc-options:      -Wall -O
  build-depends:    base
  exposed-modules:
    Tuya.Decode
    Tuya.Discover
    Tuya.Types

  build-depends:
    , aeson
    , base
    , bytestring
    , cereal
    , cryptonite
    , memory
    , network
    , unordered-containers

executable tuya
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -O -threaded

  -- other-modules:    
  build-depends:
    , base
    , tuya
