cabal-version: 2.4
name:          tuya
version:       0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:        Shaun Sharples
maintainer:    shaun.sharples@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  hs-source-dirs:   lib
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  build-depends:    base
  exposed-modules:
    Tuya.Cloud
    Tuya.Config
    Tuya.Decode
    Tuya.Devices
    Tuya.Discover
    Tuya.Encode
    Tuya.HomeAssistant
    Tuya.Local
    Tuya.Poll
    Tuya.Types

  build-depends:
    , aeson
    , aeson-casing
    , async
    , authenticate-oauth
    , base
    , base16-bytestring
    , bytestring
    , case-insensitive
    , cereal
    , containers
    , cryptonite
    , digest
    , http-client
    , http-client-tls
    , http-types
    , memory
    , net-mqtt
    , network
    , network-uri
    , postgresql-simple
    , pqueue
    , req
    , resource-pool
    , scientific
    , text
    , time
    , transformers
    , unordered-containers
    , yaml

executable tuya
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -O2 -threaded
    "-with-rtsopts=-N4 -qg --disable-delayed-os-memory-return"

  -- other-modules:    
  build-depends:
    , aeson
    , async
    , base
    , network
    , text
    , time
    , tuya
